--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.5",
+    "@react-three/fiber": "^8.17.10",
+    "babel-plugin-glsl": "^1.0.0",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
+    "lenis": "^1.1.18",
+    "p5": "^1.11.2",
+    "p5.brush": "^1.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.172.0",
+    "trois": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -22,8 +34,11 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "glslify-loader": "^2.0.0",
+    "sass-embedded": "^1.83.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-glsl": "^1.3.1"
   }
 }
