--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.6",
     "babel-plugin-glsl": "^1.0.0",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
