--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "p5.brush": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-three-fiber": "^6.0.13",
     "three": "^0.172.0",
