--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-three-fiber": "^6.0.13",
+    "scrollreveal": "^4.0.9",
     "three": "^0.172.0",
     "trois": "^1.0.3"
   },
